# BioT_Speech_IoT_LLM_App

./: .env  .gitignore  README.md  pyproject.toml
app/: agent_cli_mcp.py  client.py  client_direct.py  main.py
mcp_server/: dice_and_sport.py
rag/: create_vector_store.py  upload_file.py
